changed the password field name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <form action="/upload" method="post" style="display: grid; gap: .5rem; grid-template-columns: auto 1fr; max-width: 500px; margin: 0 auto;" enctype="multipart/form-data">
         <label for="file">File:</label>
         <input type="file" id="file" name="file" required>
-        <label for="password">File:</label>
+        <label for="password">password:</label>
         <input type="password" id="password" name="password">
         <button type="submit" style="grid-column: span 2;">Share</button>
     </form>
