--- a/views/password.ejs
+++ b/views/password.ejs
@@ -4,18 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    main{
+    height: 100vh;
+    width: 100vw;
+    background: rgba(224, 224, 224,.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+        }
+    .form_div {
+    height: 400px;
+    width: 400px;
+    border-radius: 1rem;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+    .frm {
+        height: 60%;
+        width: 60%;
+        /* background: red; */
+    }
+    #password {
+        width: 100%;
+        text-align: center;
+    }
+    form {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 4rem;
+    }
+    .btn{
+    padding: .5rem 1.5rem;
+    background-color: #CDC1FF;
+    border-radius: .5rem;
+    border: none;
+    font-weight: 500;
+    color: black;
+    border: 2px solid black;
+  }
+  #password {
+    text-align: center;
+    width: 100%;
+    padding: 1rem;
+    border: 2px solid black;
+    border-radius: .5rem;
+  }
+  .err {
+    opacity: 0;
+position: absolute;
+top: 0;
+margin-top: 10%;
+display: flex;
+flex-direction: column;
+padding: 1.5rem;
+background-color: #f8d7da; /* Light red/pink */
+  color: #842029;           /* Dark red for text */
+  border: 1px solid #f5c2c7; /* Slightly darker border */
+  border-radius: 5px; 
+animation: expand 1.5s ease-out;
+  }
+
+  @keyframes expand {
+  0% {
+    opacity: 1;
+    clip-path: circle(0.4% at 50% 50%);
+  }
+  50%{
+    opacity: 1;
+    clip-path: circle(50% at 50% 50%);
+  }
+  100% {
+    clip-path: circle(0.4% at 50% 50%);
+  }
+}
+    </style>
 </head>
 <body>
-    <% if(locals.error){ %>
-        <div style="color:red; margin-bottom: 1rem;">
-            Incorrect Password
+    <main>
+        <div class="form_div">
+        <% if(locals.error){ %>
+            <div class="err">
+                Incorrect Password
+            </div>
+        <% } %>
+        <div class="frm">
+        <!-- removed the action property cause by default it will sent us on the same page we are currently on -->
+        <!-- display: grid; gap: .5rem; grid-template-columns: auto 1fr; max-width: 500px; margin: 0 auto; -->
+        <form  method="post">
+            <!-- <label for="password">File:</label> -->
+            <input type="password" id="password" name="password" placeholder="Enter Password" required>
+            <button type="submit" style="grid-column: span 2;" class="btn">Download</button>
+        </form>
         </div>
-    <% } %>
-    <!-- removed the action property cause by default it will sent us on the same page we are currently on -->
-    <form  method="post" style="display: grid; gap: .5rem; grid-template-columns: auto 1fr; max-width: 500px; margin: 0 auto;">
-        <label for="password">File:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit" style="grid-column: span 2;">Download</button>
-    </form>
+
+    </div>
+    </main>
 </body>
 </html>
