added the privacy policy and terms and Condition page , also handled their routing

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -68,8 +68,7 @@
                 WITH THE WORLD USING
             </h2>
             <p class="Sml_intro_h2_2">PEER-SHARE</p>
-            <p class="Sml_intro_p_2">SAY GOODBY TO UNORGANIZED GROUP CHATS . OUR CHAT
-                SYSTEM STREAMLINES COMMUNICATION AND KEEPS EVERYONE ON THE SAME PAGE</p>
+            <p class="Sml_intro_p_2">SAY GOODBYE TO COMPLEX FILE SHARING AND UNORGANIZED CHATS. OUR APPLICATION OFFERS SEAMLESS FILE TRANSFER WITHOUT ACCOUNT CREATION AND A STREAMLINED CHAT SYSTEM TO KEEP EVERYONE CONNECTED.</p>
             <div class="Image_div">
                 <img src="Pictures\chatAPP.png" alt="Error" class="Image1">
             </div>
@@ -229,8 +228,8 @@
                                     <p style="color: #fff;">&copy; 2025 PEER-SHARE. All Rights Reserved.</p>
                                     <p style="color: #fff;">
                                         <a href="/aboutus" style="margin: 0 10px; color: #fff;">About</a> |
-                                        <a href="/privacy-policy" style="margin: 0 10px;color: #fff;">Privacy Policy</a> |
-                                        <a href="/terms-of-service" style="margin: 0 10px;color: #fff;">Terms of Service</a> |
+                                        <a href="/privacyPolicy" style="margin: 0 10px;color: #fff;">Privacy Policy</a> |
+                                        <a href="/termsandServices" style="margin: 0 10px;color: #fff;">Terms of Service</a> |
                                         <a href="/contactus" style="margin: 0 10px;color: #fff;">Contact Us</a>
                                     </p>
                                     <p style="color: #fff;">
